// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectTree should render component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6 ::-ms-check {
  display: none;
}

.c6:checked+.c7 {
  background-color: #0062FF;
  border: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:disabled+.c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:not(:checked)+.c7 >* {
  display: none;
}

.c6:hover:not(:disabled)::after,
.c6:focus:not(:disabled)+.c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:checked:disabled+.c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled+.c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c5 {
  margin: 2px;
  margin-right: 10px;
  flex-shrink: 0;
}

.c10 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <div
            class="c4 c5"
          >
            <input
              class="c6"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4 c5"
          >
            <input
              class="c6"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6 ::-ms-check {
  display: none;
}

.c6:checked+.c7 {
  background-color: #0062FF;
  border: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:disabled+.c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:not(:checked)+.c7 >* {
  display: none;
}

.c6:hover:not(:disabled)::after,
.c6:focus:not(:disabled)+.c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:checked:disabled+.c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled+.c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c5 {
  margin: 2px;
  margin-right: 10px;
  flex-shrink: 0;
}

.c10 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <div
          class="c4 c5"
        >
          <input
            class="c6"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4 c5"
        >
          <input
            class="c6"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectTree should render component with expanded lists 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6 ::-ms-check {
  display: none;
}

.c6:checked+.c7 {
  background-color: #0062FF;
  border: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:disabled+.c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:not(:checked)+.c7 >* {
  display: none;
}

.c6:hover:not(:disabled)::after,
.c6:focus:not(:disabled)+.c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:checked:disabled+.c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled+.c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c5 {
  margin: 2px;
  margin-right: 10px;
  flex-shrink: 0;
}

.c10 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <div
            class="c4 c5"
          >
            <input
              class="c6"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4 c5"
          >
            <input
              class="c6"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6 ::-ms-check {
  display: none;
}

.c6:checked+.c7 {
  background-color: #0062FF;
  border: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:disabled+.c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:not(:checked)+.c7 >* {
  display: none;
}

.c6:hover:not(:disabled)::after,
.c6:focus:not(:disabled)+.c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:checked:disabled+.c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled+.c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c5 {
  margin: 2px;
  margin-right: 10px;
  flex-shrink: 0;
}

.c10 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <div
          class="c4 c5"
        >
          <input
            class="c6"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4 c5"
        >
          <input
            class="c6"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectTree should render small components 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6 ::-ms-check {
  display: none;
}

.c6:checked+.c7 {
  background-color: #0062FF;
  border: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:disabled+.c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:not(:checked)+.c7 >* {
  display: none;
}

.c6:hover:not(:disabled)::after,
.c6:focus:not(:disabled)+.c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:checked:disabled+.c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled+.c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 20px;
  height: 20px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 6px 16px 6px 0px;
}

.c5 {
  margin: 2px;
  margin-right: 10px;
  flex-shrink: 0;
}

.c10 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <div
            class="c4 c5"
          >
            <input
              class="c6"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4 c5"
          >
            <input
              class="c6"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c10"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6 ::-ms-check {
  display: none;
}

.c6:checked+.c7 {
  background-color: #0062FF;
  border: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:disabled+.c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:not(:checked)+.c7 >* {
  display: none;
}

.c6:hover:not(:disabled)::after,
.c6:focus:not(:disabled)+.c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:checked:disabled+.c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled+.c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 20px;
  height: 20px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 6px 16px 6px 0px;
}

.c5 {
  margin: 2px;
  margin-right: 10px;
  flex-shrink: 0;
}

.c10 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <div
          class="c4 c5"
        >
          <input
            class="c6"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4 c5"
        >
          <input
            class="c6"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c10"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
